src/DetailsView/components/failure-instance-panel.scss
// Copyright (c) Microsoft Corporation. All rights reserved.
// Licensed under the MIT License.
@import '../../common/styles/colors.scss';

.failure-instance-panel {
    .observed-failure-textfield {
        padding-bottom: 12px;
    }
    :global(.header-text) {
        font-size: 21px;
    }
}

.failure-instance-snippet-empty-body {
    margin: 8px 0px 24px 0px;
    color: $secondary-text;
}

.failure-instance-snippet-title {
    margin: 24px 0px 8px 0px;
    color: $primary-text;
}

.learn-more {
    color: $communication-primary;
    text-decoration: none;
    display: inline-block;
    margin-bottom: 24px;
}

.failure-instance-selector-note {
    color: $secondary-text;
    margin: 8px 0px 8px 0px;
}

.failure-instance-snippet-filled-body {
    margin: 8px 0px 24px 0px;
    padding: 12px 16px 12px 16px;
    max-height: 200px;
    color: $primary-text;
    background-color: $neutral-4;
    overflow-y: scroll;
    word-wrap: break-word;
}

.failure-instance-snippet-error {
    margin: 9px 0px 50px 9px;
    color: $secondary-text;
    display: flex;
    flex-direction: row;
}

.failure-instance-snippet-error-icon {
    color: $negative-outcome;
    padding: 3px 8px;
}

.edit-button {
    font-size: 16px !important;
    line-height: 24px !important;
    color: $neutral-100 !important;
}

